[package]
name = "proxylb"
version = "0.1.0"
edition = "2021"
description = "High-performance SOCKS5 proxy load balancer with Shadowsocks inbound support"

[dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Shadowsocks protocol codec
shadowsocks = { version = "1.24", features = ["aead-cipher-extra"] }

# SOCKS5 server
fast-socks5 = "1.0.0"

# Web dashboard
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time utilities
chrono = { version = "0.4.44", features = ["serde"] }
url = "2.5.8"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.7"
# Lock-free MPMC channel for the connection pool
flume = "0.12"



[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
