[package]
name = "proxylb"
version = "1.3.0"
edition = "2024"
description = "High-performance SOCKS5 proxy load balancer with Shadowsocks inbound support"

[dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Shadowsocks protocol codec
shadowsocks = { version = "1.24", features = ["aead-cipher-extra"] }

# SOCKS5 server
fast-socks5 = "1.0.0"

# MTProto Server implementation
mtproto-server = { path = "../telemt/mtproto-server" }

# Web dashboard
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
httparse = "1.10.1"


# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.5"

# CLI
clap = { version = "4", features = ["derive"] }

memory-stats = "1.2.0"

# Error handling
anyhow = "1"
thiserror = "2"
libc = "0.2.186"
parking_lot = "0.12.5"

# Time utilities
chrono = { version = "0.4.44", features = ["serde"] }
url = "2.5.8"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.7"
# Lock-free MPMC channel for the connection pool
flume = "0.12"
# Task cancellation (CancellationToken) for hot reload
tokio-util = { version = "0.7.18", features = ["rt"] }
arc-swap = "1.9.1"
core_affinity = "0.8.3"
rustls-pemfile = "2.2.0"
base64 = "0.22.1"
rcgen = "0.14.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"



[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = false
